--- a/vue-easytable/app.html
+++ b/vue-easytable/app.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>vue-easytable</title>
-<script type="text/javascript">window.webpackManifest={"0":"js/table.332e20e4.js","1":"js/pagination.17e3ee60.js","2":"js/updateLog.78d59a86.js","3":"js/vendors.540b3ef5.js","4":"js/app.46131f02.js"}</script><link href="css/app-c85437ca.css" rel="stylesheet"></head>
+<script type="text/javascript">window.webpackManifest={"0":"js/table.75369a2c.js","1":"js/pagination.ab4a77e6.js","2":"js/start.69f94e08.js","3":"js/vendors.540b3ef5.js","4":"js/app.6dd79ad2.js"}</script><link href="css/app-6cd9365b.css" rel="stylesheet"></head>
 
 <body>
     <div id="app">
 
     </div>
-<script type="text/javascript" src="js/manifest.d41d8cd9.js"></script><script type="text/javascript" src="js/vendors.540b3ef5.js"></script><script type="text/javascript" src="js/app.46131f02.js"></script></body>
+<script type="text/javascript" src="js/manifest.d41d8cd9.js"></script><script type="text/javascript" src="js/vendors.540b3ef5.js"></script><script type="text/javascript" src="js/app.6dd79ad2.js"></script></body>
 
 </html>
