--- a/vue-easytable/app.html
+++ b/vue-easytable/app.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>vue table 组件 强大、灵活 支持单元格合并、单元格编辑、多表头固定、多列固定、列拖动、排序、自定义列、分页、单元格编辑、全选、行展开、导出excel、汇总 github</title>
-    <meta name="description" content="vue2.x table 组件，支持 单元格合并、单元格编辑、多表头固定、多列固定、列拖动、排序、自定义列、分页、单元格编辑、全选、行展开、导出excel、汇总 Vue2.x flexible table components, support for cell edit,multi-head fixed, multi-column fixed, clumn drag, sort, custom column,Cell Editing, Support cell merge (colSpan and rowSpan),Support checkbox selection">
+    <meta name="description" content="vue table 组件 强大、灵活，支持 单元格合并、单元格编辑、多表头固定、多列固定、列拖动、排序、自定义列、分页、单元格编辑、全选、行展开、导出excel、汇总 Vue2.x flexible table components, support for cell edit,multi-head fixed, multi-column fixed, clumn drag, sort, custom column,Cell Editing, Support cell merge (colSpan and rowSpan),Support checkbox selection">
     <meta property="og:type" content="website">
     <meta property="og:title" content="vue2.x table 组件，支持 单元格合并、单元格编辑、多表头固定、多列固定、列拖动、排序、自定义列、分页、单元格编辑、全选 Vue2.x flexible table components, support for cell edit,multi-head fixed, multi-column fixed, clumn drag, sort, custom column,Cell Editing, Support cell merge (colSpan and rowSpan),Support checkbox selection">
     <meta property="og:url" content="https://github.com/huangshuwei/vue-easytable">
     <meta property="og:site_name" content="vue table 组件">
-<script type="text/javascript">window.webpackManifest={"0":"js/table.4e7e133f.js","1":"js/checkbox.4b8d18f0.js","2":"js/start.deb383b1.js","3":"js/pagination.1e0e7538.js","4":"js/vendors.540b3ef5.js","5":"js/app.3d40583f.js"}</script><link href="css/app-868dbf3d.css" rel="stylesheet"></head>
+<script type="text/javascript">window.webpackManifest={"0":"js/table.503e1efd.js","1":"js/checkbox.4b8d18f0.js","2":"js/start.deb383b1.js","3":"js/pagination.1e0e7538.js","4":"js/vendors.540b3ef5.js","5":"js/app.627c54a4.js"}</script><link href="css/app-868dbf3d.css" rel="stylesheet"></head>
 
 <body>
     <div id="app">
 
     </div>
-<script type="text/javascript" src="js/manifest.d41d8cd9.js"></script><script type="text/javascript" src="js/vendors.540b3ef5.js"></script><script type="text/javascript" src="js/app.3d40583f.js"></script></body>
+<script type="text/javascript" src="js/manifest.d41d8cd9.js"></script><script type="text/javascript" src="js/vendors.540b3ef5.js"></script><script type="text/javascript" src="js/app.627c54a4.js"></script></body>
 
 </html>
