--- a/vue-easytable/app.html
+++ b/vue-easytable/app.html
@@ -9,12 +9,12 @@
     <meta property="og:title" content="vue2.x table 组件，支持 单元格合并、单元格编辑、多表头固定、多列固定、列拖动、排序、自定义列、分页、单元格编辑、全选 Vue2.x flexible table components, support for cell edit,multi-head fixed, multi-column fixed, clumn drag, sort, custom column,Cell Editing, Support cell merge (colSpan and rowSpan),Support checkbox selection">
     <meta property="og:url" content="https://github.com/huangshuwei/vue-easytable">
     <meta property="og:site_name" content="vue table 组件">
-<script type="text/javascript">window.webpackManifest={"0":"js/table.45d8f0de.js","1":"js/checkbox.4b8d18f0.js","2":"js/start.082eea28.js","3":"js/pagination.1e0e7538.js","4":"js/vendors.540b3ef5.js","5":"js/app.983fe646.js"}</script><link href="css/app-597760ba.css" rel="stylesheet"></head>
+<script type="text/javascript">window.webpackManifest={"0":"js/table.246c9995.js","1":"js/checkbox.3a6a3075.js","2":"js/intro.2f339d69.js","3":"js/pagination.ef7e623c.js","4":"js/start.3007d20b.js","5":"js/install.341a5f58.js","6":"js/vendors.58df5274.js","7":"js/app.ccf6572d.js"}</script><link href="css/app-75cbb243.css" rel="stylesheet"></head>
 
 <body>
     <div id="app">
 
     </div>
-<script type="text/javascript" src="js/manifest.d41d8cd9.js"></script><script type="text/javascript" src="js/vendors.540b3ef5.js"></script><script type="text/javascript" src="js/app.983fe646.js"></script></body>
+<script type="text/javascript" src="js/manifest.d41d8cd9.js"></script><script type="text/javascript" src="js/vendors.58df5274.js"></script><script type="text/javascript" src="js/app.ccf6572d.js"></script></body>
 
 </html>
