--- a/vue-easytable/app.html
+++ b/vue-easytable/app.html
@@ -9,12 +9,12 @@
     <meta property="og:title" content="vue2.x table 组件，支持 单元格合并、单元格编辑、多表头固定、多列固定、列拖动、排序、自定义列、分页、单元格编辑、全选 Vue2.x flexible table components, support for cell edit,multi-head fixed, multi-column fixed, clumn drag, sort, custom column,Cell Editing, Support cell merge (colSpan and rowSpan),Support checkbox selection">
     <meta property="og:url" content="https://github.com/huangshuwei/vue-easytable">
     <meta property="og:site_name" content="vue table 组件">
-<script type="text/javascript">window.webpackManifest={"0":"js/table.778c5b3c.js","1":"js/checkbox.64040d94.js","2":"js/intro.1274d0c0.js","3":"js/pagination.81877c29.js","4":"js/start.1a324cd2.js","5":"js/install.59519cb0.js","6":"js/vendors.8bcc51db.js","7":"js/app.e0666879.js"}</script><link href="css/app-9c827ead.css" rel="stylesheet"></head>
+<script type="text/javascript">window.webpackManifest={"0":"js/table.3ee6ef3d.js","1":"js/checkbox.64040d94.js","2":"js/intro.1274d0c0.js","3":"js/pagination.81877c29.js","4":"js/start.1a324cd2.js","5":"js/install.59519cb0.js","6":"js/select.867d026c.js","7":"js/dropdown.12e1f23e.js","8":"js/vendors.8bcc51db.js","9":"js/app.70c022b4.js"}</script><link href="css/app-a9f9616a.css" rel="stylesheet"></head>
 
 <body>
     <div id="app">
 
     </div>
-<script type="text/javascript" src="js/manifest.d41d8cd9.js"></script><script type="text/javascript" src="js/vendors.8bcc51db.js"></script><script type="text/javascript" src="js/app.e0666879.js"></script></body>
+<script type="text/javascript" src="js/manifest.d41d8cd9.js"></script><script type="text/javascript" src="js/vendors.8bcc51db.js"></script><script type="text/javascript" src="js/app.70c022b4.js"></script></body>
 
 </html>
