--- a/theme-creator-cli-demo/index.html
+++ b/theme-creator-cli-demo/index.html
@@ -35,7 +35,7 @@
     <div id="root"></div>
     <script
       src="https://utteranc.es/client.js"
-      repo="https://github.com/huangshuwei/comments"
+      repo="huangshuwei/comments"
       issue-term="url"
       label="TEST_LABEL"
       theme="github-light"
